Fix overflow on small screens

--- a/styles/grid.less
+++ b/styles/grid.less
@@ -5,7 +5,6 @@
     display: flex;
     flex-wrap: wrap;
     .item {
-        width: 100%;
         padding: 2rem;
         &.text {
             align-self: center;
